# backstage-template

fastapi-service/: template.yaml
fastapi-service/content/: Dockerfile  catalog-info.yaml  pyproject.toml
fastapi-service/content/.github/workflows/: ci.yaml
fastapi-service/content/app/: config.py  main.py
fastapi-service/content/app/api/routes/: health.py
fastapi-service/content/tests/: test_health.py
