[project]
name = "${{ values.name }}"
version = "0.1.0"
description = "${{ values.description }}"
requires-python = ">=${{ values.pythonVersion }}"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.5.0",
{%- if values.includeDatabase %}
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
{%- endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py${{ values.pythonVersion | replace('.', '') }}"

[tool.pytest.ini_options]
asyncio_mode = "auto"